For Shali again

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ body {
 .Heroslidesection {
   display: flex;
   align-items: center;
-  background-image: url("http://up419.siz.co.il/up3/gynum2woj1yy.jpg");
+  background-image: url("./assets/img/heroslidepic.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
